# KeyRA

./: .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix
.github/workflows/: ci.yaml
assets/: auth.html  index.html  style.css
contracts/: DEPLOY.md  foundry.toml
contracts/src/: AccessList.sol
contracts/test/: AccessList.invariant.t.sol  AccessList.t.sol
helm/alpha/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values.yaml
helm/alpha/templates/: _helpers.tpl  deployment.yaml  namespace.yaml  service.yaml
scripts/: deploy-contract.sh  start-autonity.sh
src/: auth.rs  lib.rs  main.rs
tests/: e2e.rs  integration.rs
tests/common/: mod.rs
